<resources>
    <string name="app_name">Payday Budget</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_secondary_activity_view">SecondaryActivityView</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daysToPayday">Day(s) Until Pay Day!!!</string>
    <string name="days">15</string>
    <string name="budgetItem">New Budget Item</string>
    <string name="editDeleteTitle">Edit or Delete budget: \"%s\"</string>
    <string-array name="budget_dialog_items">
        <item>Share</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="confirmMessage">Are you sure you want to delete the search \"%s\"?</string>
    <string name="delete">Delete</string>
    <string name="budget_hint">Budget Name ex. Bills</string>
    <string name="newBudgetTitle">New Budget</string>
    <string name="newBudgetDescription">Budget Description</string>
    <string name="newBudgetValuesTitle">Choose Percent of Paycheck</string>
    <string name="percentTextView">Percent %</string>
    <string name="budgetAmountTextView">Amount $</string>
    <string name="budgetPercentEditText">50%</string>
    <string name="budgetAmountEditText">$200.00</string>
    <string name="saveBudgetButton">Save Budget</string>
    <string name="cancelBudgetButton">Cancel</string>
</resources>
